[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/fonts/FredokaOne/FredokaOne-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/fonts/JetBrainsMono/JetBrainsMonoNerdFontCompleteM-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/placeholder.png" type="Texture" id=3]
[ext_resource path="res://games/memory_game/card/card.gd" type="Script" id=4]
[ext_resource path="res://games/memory_game/card/texture.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.4, 0.4, 0.4, 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="Animation" id=7]
resource_name = "turn"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1 ), Vector2( -1, 1 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"values": [ {
"args": [  ],
"method": "_calculate_pivot_offset"
}, {
"args": [  ],
"method": "_exchange_images"
}, {
"args": [  ],
"method": "_calculate_pivot_offset"
} ]
}

[node name="CardButton" type="TextureButton"]
anchor_right = 0.5625
anchor_bottom = 1.0
rect_min_size = Vector2( 144, 160 )
rect_pivot_offset = Vector2( 540, 540 )
texture_normal = ExtResource( 3 )
expand = true
script = ExtResource( 4 )
__meta__ = {
"_editor_description_": ""
}

[node name="BackColor" type="Button" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 9 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 9 )

[node name="Texture" type="TextureRect" parent="BackColor"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 5 )
expand = true

[node name="Subtitle" type="Label" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 0.905
margin_bottom = -0.400024
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "#"
align = 1
valign = 2
autowrap = true

[node name="LockCard" type="Label" parent="."]
visible = false
modulate = Color( 1, 1, 1, 0.290196 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.0
margin_top = -15.0
margin_right = 7.0
margin_bottom = 15.0
custom_fonts/font = SubResource( 8 )
text = "ï€£"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/turn = SubResource( 7 )

[connection signal="pressed" from="." to="." method="_on_CardButton_pressed"]
[connection signal="pressed" from="BackColor" to="." method="_on_CardButton_pressed"]
